; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_stream_buf_get_next.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_stream_buf_get_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stream_buf = type { %struct.buffer }
%struct.buffer = type { i32 }

@D_STREAM_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"STREAM: GET NEXT len=%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stream_buf*, %struct.buffer*)* @stream_buf_get_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stream_buf_get_next(%struct.stream_buf* %0, %struct.buffer* %1) #0 {
  %3 = alloca %struct.stream_buf*, align 8
  %4 = alloca %struct.buffer*, align 8
  store %struct.stream_buf* %0, %struct.stream_buf** %3, align 8
  store %struct.buffer* %1, %struct.buffer** %4, align 8
  %5 = load i32, i32* @D_STREAM_DEBUG, align 4
  %6 = load %struct.stream_buf*, %struct.stream_buf** %3, align 8
  %7 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %6, i32 0, i32 0
  %8 = call i64 @buf_defined(%struct.buffer* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load %struct.stream_buf*, %struct.stream_buf** %3, align 8
  %12 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.buffer, %struct.buffer* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  br label %16

15:                                               ; preds = %2
  br label %16

16:                                               ; preds = %15, %10
  %17 = phi i32 [ %14, %10 ], [ -1, %15 ]
  %18 = call i32 @dmsg(i32 %5, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = load %struct.stream_buf*, %struct.stream_buf** %3, align 8
  %20 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %19, i32 0, i32 0
  %21 = call i64 @buf_defined(%struct.buffer* %20)
  %22 = call i32 @ASSERT(i64 %21)
  %23 = load %struct.buffer*, %struct.buffer** %4, align 8
  %24 = load %struct.stream_buf*, %struct.stream_buf** %3, align 8
  %25 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %24, i32 0, i32 0
  %26 = bitcast %struct.buffer* %23 to i8*
  %27 = bitcast %struct.buffer* %25 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %26, i8* align 4 %27, i64 4, i1 false)
  ret void
}

declare dso_local i32 @dmsg(i32, i8*, i32) #1

declare dso_local i64 @buf_defined(%struct.buffer*) #1

declare dso_local i32 @ASSERT(i64) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
